# nix-devshells

./: .envrc  .gitignore  .mcp.json  .pre-commit-config.yaml  .yamllint  COMPOSITION_GUIDE.md  MODULARITY_PROPOSAL.md  MODULE_GUIDE.md  README.md  TEST_REPORT.md  _typos.toml  default.nix  flake.nix
.github/: CI.md  dependabot.yaml  labeler.yaml
.github/workflows/: ci.yaml  pr-labels.yaml  update-flake.yaml
.shrimp/: tasks.json
.taskmaster/: config.json  state.json
.taskmaster/tasks/: tasks.json
base/: codanna.nix  common.nix  gitlab.nix  serena.Dockerfile  serena.nix
languages/: ansible.nix  cpp.nix  js.nix  latex.nix  nix.nix  php.nix  python.nix  rust.nix
lib/: agents.nix  compose.nix  default.nix  mcp.nix  mkAgentModule.nix  mkMcpModule.nix  utils.nix  validate.nix  worktree.nix
lib/harness/: claude.nix  default.nix  opencode.nix
lib/skills/: agile-backlog.md  agile-breakdown.md  agile-delivery.md  agile-discovery.md  agile-map.md  agile-mvp.md  agile-plan.md  agile-planning.md  agile-stories.md  agile-team.md  agile-vision.md  collect-results.md  iteration-loop.md  orchestrate.md  prd.md  review-and-merge.md  spawn-workers.md
lib/worktree/: claude-md.nix  default.nix  flake.nix  hooks.nix  scripts.nix  source.nix
modules/agents/: code-reviewer.nix  codebase-researcher.nix  coder.nix  complexity-analyzer.nix  default.nix  design-assistant.nix  software-designer.nix  sql-assistant.nix  test-specialist.nix
modules/languages/: ansible.nix  cpp.nix  default.nix  js.nix  julia.nix  latex.nix  nix.nix  php.nix  python.nix  rust.nix
modules/mcp/: cargo.nix  claude-task-master.nix  codanna.nix  computer-use.nix  cratedocs.nix  default.nix  github.nix  gitlab.nix  grafana.nix  libre.nix  mempalace.nix  obsidian.nix  onedev.nix  paper-search.nix  puppeteer.nix  qdrant.nix  serena.nix  shrimp.nix  universal-screenshot.nix
modules/presets/: default.nix  full.nix  minimal.nix  standard.nix
modules/tools/: default.nix  editors.nix  nix-tools.nix  utilities.nix  version-control.nix
pkgs/: cargo-mcp.nix  claude-task-master.nix  codanna.nix  common.nix  computer-use-mcp.nix  cratedocs-mcp.nix  default.nix  mcp-grafana.nix  mcp-libre.nix  mempalace.nix  obsidian-mcp.nix  paper-search-mcp.nix  puppeteer-mcp.nix  qdrant-mcp.nix  rtk.nix  shrimp.nix  tod.nix  universal-screenshot-mcp.nix
pkgs/claude-task-master/: claude-task-master-package-lock.json  claude-task-master-package.json  default.nix  package-lock.json  update.sh
pkgs/paper-search-mcp/: default.nix
pkgs/qdrant-mcp/: default.nix
templates/cpp/: .mcp.json  .pre-commit-config.yaml  CMakeLists.txt  README.md  flake.nix
templates/cpp/benchmarks/: bench_example.cpp
templates/cpp/include/: example.hpp
templates/cpp/src/: example.cpp  main.cpp
templates/cpp/tests/: test_example.cpp
templates/latex/: .gitignore  .pre-commit-config.yaml  flake.nix
templates/php/: .mcp.json  .pre-commit-config.yaml  README.md  composer.json  flake.nix
templates/rust/: .mcp.json  .pre-commit-config.yaml  README.md  flake.nix  justfile  rustfmt.toml
templates/worktree/: README.md  flake.nix
